# hpp-manipulation

./: .git-blame-ignore-revs  .gitlab-ci.yml  CMakeLists.txt  NEWS  README.md  TODO.txt  default.nix  flake.nix  package.xml  pyproject.toml
doc/: Doxyfile.extra.in  main.hh  main.hh.in
include/: connected-component.hh
include/hpp/manipulation/: axial-handle.hh  connected-component.hh  constraint-builder.hh  constraint-set.hh  container.hh  device.hh  fwd.hh  graph-node-optimizer.hh  graph-optimizer.hh  graph-path-validation.hh  graph-steering-method.hh  grasp.hh  gripper.hh  handle.hh  leaf-connected-comp.hh  manipulation-planner.hh  motion-projector.hh  object.hh  package-config.hh.in  path-projector.hh  problem-solver.hh  problem.hh  rmr-star.hh  roadmap-node.hh  roadmap.hh  robot.hh  serialization.hh  symbolic-component.hh  symbolic-planner.hh  weighed-distance.hh
include/hpp/manipulation/graph/: dot.hh  edge.hh  fwd.hh  graph-component.hh  graph.hh  gripper-state-selector.hh  gripper-state.hh  gripper-transition.hh  guided-node-selector.hh  guided-state-selector.hh  helper.hh  node-selector.hh  node.hh  state-selector.hh  state.hh  statistics.hh  validation.hh
include/hpp/manipulation/path-optimization/: config-optimization.hh  enforce-transition-semantic.hh  keypoints.hh  random-shortcut.hh  small-steps.hh  spline-gradient-based.hh
include/hpp/manipulation/path-planner/: end-effector-trajectory.hh  in-state-path.hh  states-path-finder.hh  transition-planner.hh
include/hpp/manipulation/path-projector/: dichotomy.hh  progressive.hh
include/hpp/manipulation/problem-target/: state.hh
include/hpp/manipulation/steering-method/: cross-state-optimization.hh  end-effector-trajectory.hh  fwd.hh  graph.hh
plugins/: CMakeLists.txt  end-effector-trajectory.cc  spline-gradient-based.cc
src/: CMakeLists.txt  astar.hh  axial-handle.cc  connected-component.cc  constraint-set.cc  device.cc  graph-node-optimizer.cc  graph-optimizer.cc  graph-path-validation.cc  graph-steering-method.cc  handle.cc  leaf-connected-comp.cc  manipulation-planner.cc  motion-projector.cc  path-projector.cc  problem-solver.cc  problem.cc  rmr-star.cc  roadmap-node.cc  roadmap.cc  robot.cc  serialization.cc  symbolic-component.cc  symbolic-planner.cc  weighed-distance.cc
src/graph/: dot.cc  edge.cc  graph-component.cc  graph.cc  guided-node-selector.cc  guided-state-selector.cc  helper.cc  node-selector.cc  node.cc  state-selector.cc  state.cc  statistics.cc  validation.cc
src/path-optimization/: config-optimization.cc  enforce-transition-semantic.cc  keypoints.cc  random-shortcut.cc  small-steps.cc  spline-gradient-based.cc
src/path-planner/: end-effector-trajectory.cc  in-state-path.cc  states-path-finder.cc  transition-planner.cc
src/path-projector/: dichotomy.cc  progressive.cc
src/problem-target/: astar.hh  state.cc
src/steering-method/: cross-state-optimization.cc  end-effector-trajectory.cc  graph.cc
src/steering-method/cross-state-optimization/: function.cc
tests/: CMakeLists.txt  path-projection.cc  test-constraintgraph.cc
